--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                 </div>
                 <div class="course_info">
                     <h4>Responsive Social Media Website UI Design</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                    aliquid animi nobis.
-                </p>
-                <a href="courses.html" class="btn btn-primary">Learn More</a>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
+                        aliquid animi nobis.
+                    </p>
+                    <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
@@ -129,11 +129,11 @@
                 </div>
                 <div class="course_info">
                     <h4>Responsive SmartHome Website Design</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                    aliquid animi nobis.
-                </p>
-                <a href="courses.html" class="btn btn-primary">Learn More</a>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
+                        aliquid animi nobis.
+                    </p>
+                    <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
             </article>
 
@@ -141,20 +141,123 @@
                 <div class="course_image">
                     <img src="./images/course3.jpg" alt="no image">
                 </div>
-               <div class="course_info">
-                <h4>Responsive Admin Dashboard UI Design</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                    aliquid animi nobis.
-                </p>
-                <a href="courses.html" class="btn btn-primary">Learn More</a>
-               </div>
+                <div class="course_info">
+                    <h4>Responsive Admin Dashboard UI Design</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
+                        aliquid animi nobis.
+                    </p>
+                    <a href="courses.html" class="btn btn-primary">Learn More</a>
+                </div>
             </article>
         </div>
     </section>
 
 
+    <section class="faqs">
+        <h2>Frequently Asked Questions</h2>
+        <div class="container faqs_container">
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>How do I Know the right courses for me?</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
+                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
+                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                </div>
+            </article>
 
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>How do I Know the right courses for me?</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
+                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
+                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>How do I Know the right courses for me?</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
+                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
+                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>How do I Know the right courses for me?</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
+                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
+                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>How do I Know the right courses for me?</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
+                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
+                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>How do I Know the right courses for me?</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
+                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
+                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>How do I Know the right courses for me?</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
+                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
+                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>How do I Know the right courses for me?</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
+                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
+                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>How do I Know the right courses for me?</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
+                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
+                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>How do I Know the right courses for me?</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
+                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
+                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                </div>
+            </article>
+        </div>
+    </section>
 
 
 
