--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Montserrat:wght@300;400;500;600;700;800&family=Poppins:ital,wght@0,300;1,100;1,200&family=Roboto:wght@500&display=swap"
         rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -261,7 +263,136 @@
 
 
 
+    <section class="container testimonials_container mySwiper">
+        <h2>Student's Testimonials</h2>
+        <div class="swiper-wrapper">
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="./images/avatar1.jpg" alt="no image">
+                </div>
+                <div class="testimonial_info">
+                    <h5>Diana Ayi</h5>
+                    <small>Student</small>
+                </div>
+                <div class="testimonial_body">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia iste, commodi sit nulla
+                        harum voluptatum, ratione exercitationem amet quae maxime vitae et rem, minus saepe. Cum
+                        esse voluptates iste.
+                    </p>
+                </div>
+
+            </article>
+
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="./images/avatar2.jpg" alt="no image">
+                </div>
+                <div class="testimonial_info">
+                    <h5>Diana Ayi</h5>
+                    <small>Student</small>
+                </div>
+                <div class="testimonial_body">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia iste, commodi sit nulla
+                        harum voluptatum, ratione exercitationem amet quae maxime vitae et rem, minus saepe. Cum
+                        esse voluptates iste.
+                    </p>
+                </div>
+            </article>
+
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="./images/avatar3.jpg" alt="no image">
+                </div>
+                <div class="testimonial_info">
+                    <h5>Diana Ayi</h5>
+                    <small>Student</small>
+                </div>
+                <div class="testimonial_body">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia iste, commodi sit nulla
+                        harum voluptatum, ratione exercitationem amet quae maxime vitae et rem, minus saepe. Cum
+                        esse voluptates iste.
+                    </p>
+                </div>
+            </article>
+
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="./images/avatar4.jpg" alt="no image">
+                </div>
+                <div class="testimonial_info">
+                    <h5>Diana Ayi</h5>
+                    <small>Student</small>
+                </div>
+                <div class="testimonial_body">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia iste, commodi sit nulla
+                        harum voluptatum, ratione exercitationem amet quae maxime vitae et rem, minus saepe. Cum
+                        esse voluptates iste.
+                    </p>
+                </div>
+            </article>
+
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="./images/avatar5.jpg" alt="no image">
+                </div>
+                <div class="testimonial_info">
+                    <h5>Diana Ayi</h5>
+                    <small>Student</small>
+                </div>
+                <div class="testimonial_body">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia iste, commodi sit nulla
+                        harum voluptatum, ratione exercitationem amet quae maxime vitae et rem, minus saepe. Cum
+                        esse voluptates iste.
+                    </p>
+                </div>
+            </article>
+
+            <article class="testimonial swiper-slide">
+                <div class="avatar">
+                    <img src="./images/avatar6.jpg" alt="no image">
+                </div>
+                <div class="testimonial_info">
+                    <h5>Diana Ayi</h5>
+                    <small>Student</small>
+                </div>
+                <div class="testimonial_body">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia iste, commodi sit nulla
+                        harum voluptatum, ratione exercitationem amet quae maxime vitae et rem, minus saepe. Cum
+                        esse voluptates iste.
+                    </p>
+                </div>
+            </article>
+        </div>
+        <div class="swiper-pagination"></div>
+    </section>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="./main.js"></script>
+
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+          slidesPerView: 1,
+          spaceBetween: 30,
+          pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+          },
+          //when window width is >=600px
+          breakpoints: {
+            600: {
+                slidesPerView: 2
+            }
+          }
+        });
+      </script>
 </body>
 
 </html>
