--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Education Website</title>
+    <title>LUMINAR TECHNOLAB</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
     <nav>
         <div class="container nav_container">
             <a href="index.html">
-                <h4>WINNER</h4>
+                <h4>LUMINAR TECHNOLAB</h4>
             </a>
             <ul class="nav_menu">
                 <li><a href="index.html">Home</a></li>
@@ -383,7 +383,7 @@
     <footer>
         <div class="container footer_container">
             <div class="footer_1">
-                <a href="index.html" class="footer_logo"><h4>WINNER</h4></a>
+                <a href="index.html" class="footer_logo"><h4>LUMINAR TECHNOLAB</h4></a>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, sapiente.</p>
             </div>
 
