--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
     <header>
         <div class="container header_container">
             <div class="header_left">
-                <h1>Grow your skills to advance your career path</h1>
+                <h1>Kerala's No.1 Software Training Institute</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor molestiae reprehenderit numquam!
-                    Suscipit, dolores quod odio dignissimos quis quia eaque.
+                    Luminar Technolab is a No.1 Software Training Institute in Kochi & Mavoor Road Calicut, offering you
+                    Job Oriented courses on Data Science, Data Analytics, Machine Learning, Python, Big Data & Other
+                    Certified IT programs
                 </p>
                 <a href="courses.html" class="btn btn-primary">Get Started</a>
             </div>
@@ -58,9 +59,9 @@
         <div class="container categories_container">
             <div class="categories_left">
                 <h1>Categories</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis amet ut delectus deserunt
-                    reprehenderit facilis dignissimos harum, expedita inventore temporibus libero est, illum sit laborum
-                    doloribus quam voluptatum alias iusto?
+                <p>Luminar Technolab, No.1 Software Training Institute offers various Software Courses along with 100%
+                    Guaranteed Placement assistance. We provide Big Data Training, Data Science, Python,Mean
+                    Stack,Software Testing & many more...
                 </p>
                 <a href="#" class="btn">Learn More</a>
             </div>
@@ -68,39 +69,39 @@
 
             <div class="categories_right">
                 <article class="category">
-                    <span class="category_icon"><i class="uil uil-bitcoin-circle"></i></span>
-                    <h5>Blockchain</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, repellendus!</p>
+                    <span class="category_icon"><i class="uil uil-laptop"></i></span>
+                    <h5>WebDevelopment</h5>
+                    <p>MEA(R)N Stack Web Development Expert - Angular & React</p>
                 </article>
 
                 <article class="category">
-                    <span class="category_icon"><i class="uil uil-palette"></i></span>
-                    <h5>Graphic Design</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, repellendus!</p>
+                    <span class="category_icon"><i class="uil uil-analytics"></i></span>
+                    <h5>Data Science</h5>
+                    <p>Data Science - ML - AI - Big Data with Cloud & TABLEAU</p>
                 </article>
 
                 <article class="category">
-                    <span class="category_icon"><i class="uil uil-usd-circle"></i></span>
-                    <h5>Finance</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, repellendus!</p>
+                    <span class="category_icon"><i class="uil uil-phone"></i></span>
+                    <h5>Business Analytics</h5>
+                    <p>Introduction to Business Intelligence, SQL, Data Warehousing, Power BI, Tableau</p>
                 </article>
 
                 <article class="category">
-                    <span class="category_icon"><i class="uil uil-megaphone"></i></span>
-                    <h5>Marketing</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, repellendus!</p>
+                    <span class="category_icon"><i class="uil uil-android"></i></span>
+                    <h5>App Development</h5>
+                    <p>Android Developer Expert Training In Kochi- Flutter</p>
                 </article>
 
                 <article class="category">
-                    <span class="category_icon"><i class="uil uil-music"></i></span>
-                    <h5>Music</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, repellendus!</p>
+                    <span class="category_icon"><i class="uil uil-analysis"></i></span>
+                    <h5>Asp.Net</h5>
+                    <p>Asp.net MVC with Angular - Full Stack</p>
                 </article>
 
                 <article class="category">
                     <span class="category_icon"><i class="uil uil-puzzle-piece"></i></span>
-                    <h5>Business</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, repellendus!</p>
+                    <h5>Python Django</h5>
+                    <p>Python Django - Angular- Full Stack Web Development Expert</p>
                 </article>
             </div>
         </div>
@@ -116,10 +117,10 @@
                     <img src="./images/course1.jpg" alt="no image">
                 </div>
                 <div class="course_info">
-                    <h4>Responsive Social Media Website UI Design</h4>
+                    <h4>Software Testing Specialist</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                        aliquid animi nobis.
+                        Manual Testing , Java foundations, Mobile Testing, Automation Testing, Selenium IDE, Selenium
+                        Web driver, Selenium Advanced
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -130,10 +131,10 @@
                     <img src="./images/course2.jpg" alt="no image">
                 </div>
                 <div class="course_info">
-                    <h4>Responsive SmartHome Website Design</h4>
+                    <h4>MEA(R)N Stack Web Development Expert - Angular & React</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                        aliquid animi nobis.
+                        HTML, CSS, Bootstrap, Javascript, Typescript, Git, Angular, React.js, Node.js, Express.js &
+                        MongoDB
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -144,10 +145,10 @@
                     <img src="./images/course3.jpg" alt="no image">
                 </div>
                 <div class="course_info">
-                    <h4>Responsive Admin Dashboard UI Design</h4>
+                    <h4>Data Science - ML - AI - Big Data with Cloud & TABLEAU</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi, placeat deserunt velit
-                        aliquid animi nobis.
+                        Python, Hadoop, Spark, Data Analytics, Linear Algebra, Statistics, Probability Concepts, Machine
+                        Learning, Deep Learning,
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -383,7 +384,9 @@
     <footer>
         <div class="container footer_container">
             <div class="footer_1">
-                <a href="index.html" class="footer_logo"><h4>LUMINAR TECHNOLAB</h4></a>
+                <a href="index.html" class="footer_logo">
+                    <h4>LUMINAR TECHNOLAB</h4>
+                </a>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, sapiente.</p>
             </div>
 
@@ -440,20 +443,20 @@
 
     <script>
         var swiper = new Swiper(".mySwiper", {
-          slidesPerView: 1,
-          spaceBetween: 30,
-          pagination: {
-            el: ".swiper-pagination",
-            clickable: true,
-          },
-          //when window width is >=600px
-          breakpoints: {
-            600: {
-                slidesPerView: 2
+            slidesPerView: 1,
+            spaceBetween: 30,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            //when window width is >=600px
+            breakpoints: {
+                600: {
+                    slidesPerView: 2
+                }
             }
-          }
         });
-      </script>
+    </script>
 </body>
 
 </html>
