--- a/index.html
+++ b/index.html
@@ -164,101 +164,93 @@
                 <div class="faq_icon"><i class="uil uil-plus"></i></div>
                 <div class="question_answer">
                     <h4>How do I Know the right courses for me?</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
-                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
-                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                    <p>Spend some time to reflect on your interests and skills.Create a list of courses to explore and
+                        research each course.Also consider the carieer opertunities</p>
                 </div>
             </article>
 
             <article class="faq">
                 <div class="faq_icon"><i class="uil uil-plus"></i></div>
                 <div class="question_answer">
-                    <h4>How do I Know the right courses for me?</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
-                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
-                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                    <h4>Advantage of joining Luminar?</h4>
+                    <p>Our mission is to provide 100% placements to students those who enrol for our specialised
+                        courses.Our placement assistance starts with Resume preparation,Mock Interviews by real working
+                        professionals,Aptitude test training & Interviews.We will provide unlimited placement assistance
+                        till the student is placed satisfactorily.!</p>
                 </div>
             </article>
 
             <article class="faq">
                 <div class="faq_icon"><i class="uil uil-plus"></i></div>
                 <div class="question_answer">
-                    <h4>How do I Know the right courses for me?</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
-                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
-                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                    <h4>would you all teach a 15 year old child?</h4>
+                    <p>Sorry,we do not have any suitable courses for such age group</p>
                 </div>
             </article>
 
             <article class="faq">
                 <div class="faq_icon"><i class="uil uil-plus"></i></div>
                 <div class="question_answer">
-                    <h4>How do I Know the right courses for me?</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
-                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
-                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                    <h4>What is the time for online classes?</h4>
+                    <p>It will depends upon your courses and batch</p>
+                </div>
+            </article>
+
+
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>Is there fullstack development course available?</h4>
+                    <p>yes, visit our website courses section you will get the details!</p>
                 </div>
             </article>
 
             <article class="faq">
                 <div class="faq_icon"><i class="uil uil-plus"></i></div>
                 <div class="question_answer">
-                    <h4>How do I Know the right courses for me?</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
-                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
-                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                    <h4>How many hours of classes will be there per day?</h4>
+                    <p>Timeing of classes will depend upon the course and batch!</p>
                 </div>
             </article>
 
             <article class="faq">
                 <div class="faq_icon"><i class="uil uil-plus"></i></div>
                 <div class="question_answer">
-                    <h4>How do I Know the right courses for me?</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
-                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
-                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                    <h4>Duration of MEARN STACK course?</h4>
+                    <p>MEARN STACK course will take almost 5 month to finish. classes are 5 Days a Week,2 Hours/Day!</p>
                 </div>
             </article>
 
             <article class="faq">
                 <div class="faq_icon"><i class="uil uil-plus"></i></div>
                 <div class="question_answer">
-                    <h4>How do I Know the right courses for me?</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
-                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
-                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                    <h4>Are you provide part time job for students?</h4>
+                    <p>Yes,we do guide and assist them for the same!</p>
                 </div>
             </article>
 
             <article class="faq">
                 <div class="faq_icon"><i class="uil uil-plus"></i></div>
                 <div class="question_answer">
-                    <h4>How do I Know the right courses for me?</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
-                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
-                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                    <h4>Any opportunities for MBA graduates?By learning AI and ML?</h4>
+                    <p>In the tech field college degree doesn't matter, if you have the skills definitly you will get
+                        the job..</p>
                 </div>
             </article>
+
+
 
             <article class="faq">
                 <div class="faq_icon"><i class="uil uil-plus"></i></div>
                 <div class="question_answer">
-                    <h4>How do I Know the right courses for me?</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
-                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
-                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
+                    <h4>I have 8 years IT career gap. Can i get placed after learning course from your institute?</h4>
+                    <p>If you have the potential to learn, you will definitly placed after the course.!</p>
                 </div>
             </article>
 
-            <article class="faq">
-                <div class="faq_icon"><i class="uil uil-plus"></i></div>
-                <div class="question_answer">
-                    <h4>How do I Know the right courses for me?</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde magni molestiae id doloribus
-                        voluptatibus eum ratione. Unde quaerat, perferendis laborum at, et doloribus, distinctio
-                        reprehenderit explicabo autem quisquam praesentium vitae!</p>
-                </div>
-            </article>
+
+
+
         </div>
     </section>
 
@@ -272,14 +264,14 @@
                     <img src="./images/avatar1.jpg" alt="no image">
                 </div>
                 <div class="testimonial_info">
-                    <h5>Diana Ayi</h5>
+                    <h5>Lyn Kurian</h5>
                     <small>Student</small>
                 </div>
                 <div class="testimonial_body">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia iste, commodi sit nulla
-                        harum voluptatum, ratione exercitationem amet quae maxime vitae et rem, minus saepe. Cum
-                        esse voluptates iste.
+                        Excellent guidance; during internship in Asp.Net platform at Luminar.The trainer is ready to
+                        support 24/7. Good industrial knowledge and leading; during practical hours.I joined from
+                        abroad and the HR and management where very helpful
                     </p>
                 </div>
 
@@ -290,14 +282,14 @@
                     <img src="./images/avatar2.jpg" alt="no image">
                 </div>
                 <div class="testimonial_info">
-                    <h5>Diana Ayi</h5>
-                    <small>Student</small>
+                    <h5>Niyas M</h5>
+                    <small>Web Dev</small>
                 </div>
                 <div class="testimonial_body">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia iste, commodi sit nulla
-                        harum voluptatum, ratione exercitationem amet quae maxime vitae et rem, minus saepe. Cum
-                        esse voluptates iste.
+                        Luminar technolab is the best platform for anyone who wants to learn software courses and starts
+                        their IT career. The trainers are very well experienced and they are open to interact with
+                        student at any time.No matter what degree stream we are.
                     </p>
                 </div>
             </article>
@@ -307,14 +299,14 @@
                     <img src="./images/avatar3.jpg" alt="no image">
                 </div>
                 <div class="testimonial_info">
-                    <h5>Diana Ayi</h5>
-                    <small>Student</small>
+                    <h5>Amal Mathew</h5>
+                    <small>Tester</small>
                 </div>
                 <div class="testimonial_body">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia iste, commodi sit nulla
-                        harum voluptatum, ratione exercitationem amet quae maxime vitae et rem, minus saepe. Cum
-                        esse voluptates iste.
+                        When i decided to switch my career to IT field, i had done a ton of research & i have came cross
+                        numerous similar institutes..but if you ask me why I choose Luminar? The confidence they have
+                        given to take up an IT course.So strongly recommend others to join Luminar.
                     </p>
                 </div>
             </article>
@@ -324,14 +316,14 @@
                     <img src="./images/avatar4.jpg" alt="no image">
                 </div>
                 <div class="testimonial_info">
-                    <h5>Diana Ayi</h5>
+                    <h5>Athira vu</h5>
                     <small>Student</small>
                 </div>
                 <div class="testimonial_body">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia iste, commodi sit nulla
-                        harum voluptatum, ratione exercitationem amet quae maxime vitae et rem, minus saepe. Cum
-                        esse voluptates iste.
+                        Luminar is an excellent institute for starting a career in IT industry. Trainers having good
+                        knowledge in the respective domains. Classes are being recorded and can be accessed anytime
+                        through the mobile app. The placement Team is super supportive.
                     </p>
                 </div>
             </article>
@@ -341,14 +333,14 @@
                     <img src="./images/avatar5.jpg" alt="no image">
                 </div>
                 <div class="testimonial_info">
-                    <h5>Diana Ayi</h5>
-                    <small>Student</small>
+                    <h5>Parvathi</h5>
+                    <small>HR</small>
                 </div>
                 <div class="testimonial_body">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia iste, commodi sit nulla
-                        harum voluptatum, ratione exercitationem amet quae maxime vitae et rem, minus saepe. Cum
-                        esse voluptates iste.
+                        Luminar technolab is the best platform to learn software training. The trainers are very well
+                        experienced and they are open to interact with student at any time. Major backbone of Luminar is
+                        their placement cell. I got the chance to attend interviews from different IT firms.
                     </p>
                 </div>
             </article>
@@ -358,14 +350,14 @@
                     <img src="./images/avatar6.jpg" alt="no image">
                 </div>
                 <div class="testimonial_info">
-                    <h5>Diana Ayi</h5>
-                    <small>Student</small>
+                    <h5>Prija U</h5>
+                    <small>Developer</small>
                 </div>
                 <div class="testimonial_body">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia iste, commodi sit nulla
-                        harum voluptatum, ratione exercitationem amet quae maxime vitae et rem, minus saepe. Cum
-                        esse voluptates iste.
+                        The experience of learning at Luminar Technolab institute has been great. The coaching is one to
+                        one and there are plenty of opportunities to learn in groups. The classes are arranged as per
+                        your convenience which I find great. And also the hr team is great and they are very helpful.
                     </p>
                 </div>
             </article>
@@ -387,7 +379,7 @@
                 <a href="index.html" class="footer_logo">
                     <h4>LUMINAR TECHNOLAB</h4>
                 </a>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, sapiente.</p>
+                <p>Software Training Institute in kochi | calicut.</p>
             </div>
 
             <div class="footer_2">
@@ -412,15 +404,15 @@
             <div class="footer_4">
                 <h4>Contact Us</h4>
                 <div>
-                    <p>+91 9876543210</p>
-                    <p>abhinkjishmon@gmail.com</p>
+                    <p>+91 8086651651</p>
+                    <p>contact@luminartechnolab.com</p>
                 </div>
                 <ul class="footer_socials">
                     <li>
-                        <a href="#"><i class="uil uil-facebook-f"></i></a>
+                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="#"><i class="uil uil-facebook-f"></i></a>
                     </li>
                     <li>
                         <a href="#"><i class="uil uil-twitter"></i></a>
