--- a/contact.html
+++ b/contact.html
@@ -99,13 +99,14 @@
 
 
 
+    
     <footer>
         <div class="container footer_container">
             <div class="footer_1">
                 <a href="index.html" class="footer_logo">
                     <h4>LUMINAR TECHNOLAB</h4>
                 </a>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, sapiente.</p>
+                <p>Software Training Institute in kochi | calicut.</p>
             </div>
 
             <div class="footer_2">
@@ -130,21 +131,21 @@
             <div class="footer_4">
                 <h4>Contact Us</h4>
                 <div>
-                    <p>+91 9876543210</p>
-                    <p>abhinkjishmon@gmail.com</p>
+                    <p>+91 8086651651</p>
+                    <p>contact@luminartechnolab.com</p>
                 </div>
                 <ul class="footer_socials">
                     <li>
-                        <a href="#"><i class="uil uil-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/luminartechnolab/"><i class="uil uil-instagram-alt"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="https://www.facebook.com/luminartechnolab/"><i class="uil uil-facebook-f"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-youtube"></i></a>
+                        <a href="https://twitter.com/luminartechno/"><i class="uil uil-twitter"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                        <a href="https://www.linkedin.com/company/luminartechnolab"><i class="uil uil-linkedin-alt"></i></a>
                     </li>
                 </ul>
             </div>
