--- a/about.html
+++ b/about.html
@@ -44,33 +44,31 @@
             <div class="about_achievements_right">
                 <h1>Achievements</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, ea vitae repellat voluptas
-                    repudiandae unde. Laborum in, magnam quibusdam, quam asperiores dicta impedit accusamus voluptas
-                    placeat id delectus facere ex!
+                    Through us 1600+ people are now working in IT field, thus it helps 1600 Families as well.
                 </p>
                 <div class="achievements_cards">
                     <article class="achievement_card">
                         <span class="achievement_icon">
                             <i class="uil uil-video"></i>
                         </span>
-                        <h3>20+</h3>
-                        <p>Courses</p>
+                        <h3>30+</h3>
+                        <p>Technologies</p>
                     </article>
 
                     <article class="achievement_card">
                         <span class="achievement_icon">
                             <i class="uil uil-users-alt"></i>
                         </span>
-                        <h3>2000+</h3>
-                        <p>Students</p>
+                        <h3>1600+</h3>
+                        <p>Placements</p>
                     </article>
 
                     <article class="achievement_card">
                         <span class="achievement_icon">
-                            <i class="uil uil-trophy"></i>
+                            <i class="uil uil-building"></i>
                         </span>
-                        <h3>16</h3>
-                        <p>Awards</p>
+                        <h3>250+</h3>
+                        <p>Companies</p>
                     </article>
                 </div>
             </div>
@@ -85,16 +83,16 @@
         <div class="container team_container">
             <article class="team_member">
                 <div class="team_member_image">
-                    <img src="./images/tm1.jpg" alt="no image">
+                    <img src="https://tse1.mm.bing.net/th?id=OIP.cEHh9A59zulbRsZQupC1QgAAAA&pid=Api&P=0" alt="no image">
                 </div>
                 <div class="team_member_info">
-                    <h4>Shatta Wale</h4>
-                    <p>Expert Tutor</p>
+                    <h4>Rahul Mohanakumar</h4>
+                    <p>Founder</p>
                 </div>
                 <div class="team_member_socials">
-                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
-                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+                    <a href="https://www.instagram.com/luminartechnolab/" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://twitter.com/luminartechno/" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://www.linkedin.com/company/luminartechnolab" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
 
                 </div>
             </article>
@@ -104,13 +102,13 @@
                     <img src="./images/tm2.jpg" alt="no image">
                 </div>
                 <div class="team_member_info">
-                    <h4>Shatta Wale</h4>
-                    <p>Expert Tutor</p>
+                    <h4>Teena Rahul</h4>
+                    <p>HR Manager</p>
                 </div>
                 <div class="team_member_socials">
-                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
-                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+                    <a href="https://www.instagram.com/luminartechnolab/" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://twitter.com/luminartechno/" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://www.linkedin.com/company/luminartechnolab" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
 
                 </div>
             </article>
@@ -120,13 +118,13 @@
                     <img src="./images/tm3.jpg" alt="no image">
                 </div>
                 <div class="team_member_info">
-                    <h4>Shatta Wale</h4>
+                    <h4>Sonia George</h4>
                     <p>Expert Tutor</p>
                 </div>
                 <div class="team_member_socials">
-                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
-                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+                    <a href="https://www.instagram.com/luminartechnolab/" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://twitter.com/luminartechno/" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://www.linkedin.com/company/luminartechnolab" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
 
                 </div>
             </article>
@@ -136,13 +134,13 @@
                     <img src="./images/tm4.jpg" alt="no image">
                 </div>
                 <div class="team_member_info">
-                    <h4>Shatta Wale</h4>
-                    <p>Expert Tutor</p>
+                    <h4>Sabir K S</h4>
+                    <p>Big Data</p>
                 </div>
                 <div class="team_member_socials">
-                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
-                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+                    <a href="https://www.instagram.com/luminartechnolab/" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://twitter.com/luminartechno/" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://www.linkedin.com/company/luminartechnolab" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
 
                 </div>
             </article>
@@ -152,13 +150,13 @@
                     <img src="./images/tm5.jpg" alt="no image">
                 </div>
                 <div class="team_member_info">
-                    <h4>Shatta Wale</h4>
+                    <h4>Rugma raghav</h4>
                     <p>Expert Tutor</p>
                 </div>
                 <div class="team_member_socials">
-                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
-                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+                    <a href="https://www.instagram.com/luminartechnolab/" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://twitter.com/luminartechno/" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://www.linkedin.com/company/luminartechnolab" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
 
                 </div>
             </article>
@@ -168,13 +166,13 @@
                     <img src="./images/tm6.jpg" alt="no image">
                 </div>
                 <div class="team_member_info">
-                    <h4>Shatta Wale</h4>
-                    <p>Expert Tutor</p>
+                    <h4>Sajay N J</h4>
+                    <p>JAVA Tutor</p>
                 </div>
                 <div class="team_member_socials">
-                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
-                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+                    <a href="https://www.instagram.com/luminartechnolab/" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://twitter.com/luminartechno/" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://www.linkedin.com/company/luminartechnolab" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
 
                 </div>
             </article>
@@ -184,14 +182,13 @@
                     <img src="./images/tm7.jpg" alt="no image">
                 </div>
                 <div class="team_member_info">
-                    <h4>Shatta Wale</h4>
-                    <p>Expert Tutor</p>
+                    <h4>Amritha Asokan</h4>
+                    <p>MEARN Tutor</p>
                 </div>
                 <div class="team_member_socials">
-                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
-                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
-
+                    <a href="https://www.instagram.com/luminartechnolab/" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://twitter.com/luminartechno/" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://www.linkedin.com/company/luminartechnolab" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
                 </div>
             </article>
 
@@ -200,13 +197,13 @@
                     <img src="./images/tm8.jpg" alt="no image">
                 </div>
                 <div class="team_member_info">
-                    <h4>Shatta Wale</h4>
-                    <p>Expert Tutor</p>
+                    <h4>Anu Sunil</h4>
+                    <p>Sales & Marketing</p>
                 </div>
                 <div class="team_member_socials">
-                    <a href="https://instagram.com" target="_blank"><i class="uil uil-instagram"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="uil uil-twitter-alt"></i></a>
-                    <a href="https://linkedin.com" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
+                    <a href="https://www.instagram.com/luminartechnolab/" target="_blank"><i class="uil uil-instagram"></i></a>
+                    <a href="https://twitter.com/luminartechno/" target="_blank"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="https://www.linkedin.com/company/luminartechnolab" target="_blank"><i class="uil uil-linkedin-alt"></i></a>
 
                 </div>
             </article>
@@ -219,13 +216,14 @@
 
 
 
+    
     <footer>
         <div class="container footer_container">
             <div class="footer_1">
                 <a href="index.html" class="footer_logo">
                     <h4>LUMINAR TECHNOLAB</h4>
                 </a>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, sapiente.</p>
+                <p>Software Training Institute in kochi | calicut.</p>
             </div>
 
             <div class="footer_2">
@@ -250,21 +248,21 @@
             <div class="footer_4">
                 <h4>Contact Us</h4>
                 <div>
-                    <p>+91 9876543210</p>
-                    <p>abhinkjishmon@gmail.com</p>
+                    <p>+91 8086651651</p>
+                    <p>contact@luminartechnolab.com</p>
                 </div>
                 <ul class="footer_socials">
                     <li>
-                        <a href="#"><i class="uil uil-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/luminartechnolab/"><i class="uil uil-instagram-alt"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="https://www.facebook.com/luminartechnolab/"><i class="uil uil-facebook-f"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-twitter"></i></a>
+                        <a href="https://twitter.com/luminartechno/"><i class="uil uil-twitter"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                        <a href="https://www.linkedin.com/company/luminartechnolab"><i class="uil uil-linkedin-alt"></i></a>
                     </li>
                 </ul>
             </div>
