--- a/index.html
+++ b/index.html
@@ -409,16 +409,16 @@
                 </div>
                 <ul class="footer_socials">
                     <li>
-                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="https://www.instagram.com/luminartechnolab/"><i class="uil uil-instagram-alt"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/luminartechnolab/"><i class="uil uil-facebook-f"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-twitter"></i></a>
+                        <a href="https://twitter.com/luminartechno/"><i class="uil uil-twitter"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                        <a href="https://www.linkedin.com/company/luminartechnolab"><i class="uil uil-linkedin-alt"></i></a>
                     </li>
                 </ul>
             </div>
